# banking-api

./: Cargo.toml  README.md  docker-compose.yaml
migrations/: 20250519055322_create_users_table.sql  20250519101215_create_transactions_table.sql  20250519101606_create_accountbalance_table.sql  20250519110938_alter_balance_to_bigint.sql  20250519111734_alter_balance_to_bigint_in_transactions.sql
src/: error.rs  lib.rs  main.rs
src/auth/: errors.rs  jwt.rs  middleware.rs  mod.rs
src/models/: account_balance.rs  mod.rs  transaction.rs  user.rs
src/routes/: balance.rs  mod.rs  transactions.rs  user.rs
