[package]
name = "banking-api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
bcrypt = "0.15"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
anyhow = "1"