[package]
name = "banking-api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
bcrypt = "0.15"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
anyhow = "1"
jsonwebtoken = "8.3"
futures-util = "0.3" 
serde_json = "1.0.140"
actix-web-httpauth = "0.8"
dotenv = "0.15"
thiserror = "1"
env_logger = "0.11"
futures = "0.3"

